--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>博客编辑</title>
+    <link rel="stylesheet" href="../CSS/styles.css" />
+
 </head>
 <body>
-
+    <main></main>
+    <script src="../JS/script.js"></script>
 </body>
 </html>
