--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,7 +3,7 @@
 <head>
     <script>
         const ua = navigator.userAgent;
-        const isMobile = /Android|iPhone|iPad|iPod|Mobile/i.test(ua);
+        const isMobile = /Android|iPhone|iPod|Mobile/i.test(ua);
 
         if (isMobile) {
             setTimeout(() => {
@@ -203,301 +203,305 @@
         一只眼睁开了又闭上。<br>
         我说，你看到了吗，那是我的家，我想回家了。<br><br>
     </p>
-    <p class="poem">
-        -<br><br>
-        啼翼出鞘 迩弥为砂<br>
-        鸣响光华 薄纱<br>
-        但闻几何彻耳于千里月下<br>
-        划过千万莹莹光点泼洒<br>
-        藏新芽<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        七点<br>
-        我出门买东西<br>
-        看见的不是什么夜中而不眠<br>
-        而是一层淡淡的薄纱 和灯光几许<br>
-        那是一条黑暗的道路<br>
-        黑暗的甚至觉察不出 炊烟的存在<br>
-        我知道那里有什么<br>
-        我也知道 那里我必须干什么<br>
-        漫天星光 洋洋洒洒 坠落到我眼前<br>
-        转瞬即逝<br>
-        回首<br>
-        那是悠长街道的 无尽边缘<br>
-        路的那边<br>
-        闪耀着那 明灯般的 又微弱的 一抹亮红<br>
-        又看回眼前 几盏窗棂<br>
-        萦绕着 旖旎的 火光<br>
-        快步走进大门<br>
-        合门时<br>
-        那静谧的 悠长的 无形的薄纱<br>
-        眼见 拦下一道<br>
-        随即<br>
-        一切都那么活泼<br>
-        灯亮固然 欢声依旧<br>
-        只有眼角流露出的期待<br>
-        才能望穿炊烟里的笑容<br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        我拉开了店门<br>
-        磅礴的雾霭升起<br>
-        你登上了阶梯<br>
-        觉感长烟始至<br>
-        静谧出奇<br>
-        我看那连绵不断<br>
-        令人满意的机器<br>
-        你捧着星辰<br>
-        唳而惊起<br>
-        却道<br>
-        你可曾织了我的嫁衣<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        流云几纵断<br>
-        鎏心几竟欢<br>
-        卷视几隅定<br>
-        留足几绛还<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        请让我再和你道一次别<br>
-        让消散的烟圈凝固成线<br>
-        让我再和你道一次别<br>
-        让流动的街角定然眼间<br>
-        请让我最后和你道一次别<br>
-        让卷起的广告回还先前<br>
-        让我最终和你道一次别<br>
-        让无限的目光断折跃迁<br>
-        请让我再和你道一次别<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        无雾萦的敲打，湍。<br>
-        卑劣的优雅飞舞得欢。<br>
-        那六台虬枝凌乱。<br>
-        案牍边明了又暗<br>
-        暗却半明的叶<br>
-        一张张翕动着蔓延着消逝着<br>
-        成了自己的枪版。<br>
-        樯峦河畔珠瓒<br>
-        也融进了涸一般意暖色暖<br>
-        歌暖。<br>
-        厚帐书难<br>
-        轻纱层进层瞰<br>
-        天阴却明之阑<br>
-        立年畔。<br>
-        惜我着靛衣身转<br>
-        倾墨叹淡<br>
-        生怕笔墨在这风寒<br>
-        半晌便干。<br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        地板上反射的光晕开始扩增<br>
-        我消散的月角也许滴落成风<br>
-        等着总会来的红灯<br>
-        和偶停脚的灰鹰<br>
-        我站在橘光下的白墙<br>
-        数着一二三四明星<br>
-        不知与谁辉映<br>
-        还有看不清的风向<br>
-        和久等的天明<br>
-        2022.02.21.03.52.15<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        第一印象<br>
-        短促而明亮<br>
-        滴落在雨面上<br>
-        沉默地流动<br>
-        沉没的火光<br>
-        风带离起跑线<br>
-        又无趣挑逗月央<br>
-        只是三个方向<br>
-        是触不到的漫长<br>
-        一贯地存放<br>
-        瀑布与水箱<br>
-        浪花面广<br>
-        便也只如须臾含离的印章<br>
-        只要出发<br>
-        都会顺利地驶向<br>
-        未曾瞻仰的前方<br>
-        2022.03.25.23.07.55<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        青幽几身滩涂<br>
-        双生金门对影<br>
-        千层明月浪难测<br>
-        颤落几笔油墨<br>
-        黑白浮雕动作<br>
-        千间牢锁万匙落<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        条条盏盏的日光<br>
-        游荡在簌簌缀饰的月芒下<br>
-        漫漫投着稀离边沿的枝节<br>
-        环环笼笼的霓虹<br>
-        附着在不闻喘息的静谧间<br>
-        偷偷描着盛放渡口的挥别<br>
-        只增几隅零零散散的明灭<br>
-        悠悠转转的目光<br>
-        回绕在列列相接的红影边<br>
-        涓涓流着丝丝流苏的鲜血<br>
-        断断续续的耳语<br>
-        盘旋在潺潺汩汩的幻想间<br>
-        默默披着时针卷席的生劫<br>
-        莫问水边镗镗鞳鞳的呜咽<br>
-        那是他乡绵延不绝的明天<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        似是樱花方白<br>
-        莫待<br>
-        偶行来<br>
-        风披铠<br>
-        才知三月早来<br>
-        登雅台<br>
-        葳蕤拽<br>
-        莫怪<br>
-        只是浮蕊轻拍<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        向高处坠落的水雾<br>
-        让忽明的天蓝<br>
-        剥离了些许杂音<br>
-        从风前飘过的柔软<br>
-        让墙上的光迹<br>
-        流转了二三水印<br>
-        沿湖海交替的穿越<br>
-        让层云的远处<br>
-        收纳了一二光心<br>
-        可难以观测的明灭<br>
-        让趋零的是否<br>
-        记录了难说何今<br>
-        只是一缕消失的云<br>
-        一隅触不可及的海滨<br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        旅行的旅行<br>
-        来自一场苏醒<br>
-        与一双不愿睁开的眼睛<br>
-        难寻尾戒一枚<br>
-        跨越风鸣<br>
-        在电台里平静地讲述着<br>
-        温宛柔媚的暴行<br>
-        倒映着着色的阴影<br>
-        印刷着碎裂的薄冰<br>
-        难推一间玄关<br>
-        机器轰鸣<br>
-        在凝雾中偷偷地伸手触<br>
-        将次移离的恒星<br>
-        间隔着揽青的叶障<br>
-        断绝着攀空的聆听<br>
-        踱尽一网战栗<br>
-        沐浴安宁<br>
-        在极光间紧紧地拥抱着<br>
-        淋漓无着的天明<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        那夜无雨，<br>
-        如此难熬。<br>
-        幽光刺骨、<br>
-        又伶俐地洒下，<br>
-        挂在熹微的人间天边，<br>
-        游动，<br>
-        像入了清水的墨水，<br>
-        看得见、<br>
-        却也摸不清，<br>
-        凝固、<br>
-        还是回家的路。<br>
-        止一块透明的玻璃，<br>
-        怜悯地望着我，<br>
-        叫我再看一眼、<br>
-        雨点打的足迹。<br>
-        可是闪动的，<br>
-        只有路灯和星星。<br>
-        偷想着，<br>
-        来自不同方向的指尖，<br>
-        在玻璃的两面，<br>
-        汇聚、<br>
-        转向。<br>
-        然后看着这幅景象，<br>
-        待到天边撕裂，<br>
-        入睡不能。<br>
-        可我又闭了眼去，<br>
-        因为我害怕天一亮，<br>
-        一切，<br>
-        就又消失得无踪无影，<br>
-        沉入那湖星辉间的泠泠。<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        半截差互的花绳<br>
-        编织典雅的捕梦网<br>
-        伴绕着抽离的魂灵<br>
-        总跨山海渺渺飘荡<br>
-        飞离了太阳与月亮<br>
-        记录着残缺的身旁<br>
-        不知胶片还有多长<br>
-        远处缎带早已曝光<br>
-        叶片打碎寂寥灯晃<br>
-        离岸灯塔指向何方<br>
-        大致未见的天堂<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        窗外蓝色的风缓缓流过<br>
-        流过蓝色窗帘的渐渐滑落<br>
-        划过边角的蹉跎<br>
-        罅隙扯开停滞的角落<br>
-        黄色的阳光坠落<br>
-        擦着蓝色的玻璃点燃篝火<br>
-        火焰在冰面上忘我<br>
-        颤抖着歌唱着生活<br>
-        歌唱着难以言说的棋布星罗<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        是云集。<br>
-        独枝展萼，万气引离。<br>
-        骇浪将至，段白，断白。<br>
-        万梦环流，是伸展，是含离。<br>
-        难扰十六风韵，幻去幻集。<br>
-        板间斜积，是画哉，归中抛离。<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        你可安好？枝桠间的舞台<br>
-        习惯了蔓延的干冰，错过了清雅的展开<br>
-        你可常在？残月间的盛开。<br>
-        你可留意？帘幕后的迷宫<br>
-        本觉是断壁残垣，才知是崖边归来<br>
-        你可忆起？星空下的慵懒<br>
-        还有安然躺在；伸手触狭间<br>
-        月开。<br><br>
-    </p>
-    <p class="poem">
-        -<br><br>
-        凝固，<br>
-        高高天上的爆竹。<br>
-        触摸方向的晨露，<br>
-        数十米路；<br>
-        半只鱼缸，<br>
-        不可交互。<br>
-        气泡在壶底上浮，<br>
-        咕噜噜。<br>
-        反射鳞上的光路，<br>
-        穿灯引幕；<br>
-        半壁蛛网，<br>
-        包裹孤独。<br><br>
-    </p>
+    <div class="poem-container">
+
+        <p class="poem">
+            -<br><br>
+            那夜无雨，<br>
+            如此难熬。<br>
+            幽光刺骨、<br>
+            又伶俐地洒下，<br>
+            挂在熹微的人间天边，<br>
+            游动，<br>
+            像入了清水的墨水，<br>
+            看得见、<br>
+            却也摸不清，<br>
+            凝固、<br>
+            还是回家的路。<br>
+            止一块透明的玻璃，<br>
+            怜悯地望着我，<br>
+            叫我再看一眼、<br>
+            雨点打的足迹。<br>
+            可是闪动的，<br>
+            只有路灯和星星。<br>
+            偷想着，<br>
+            来自不同方向的指尖，<br>
+            在玻璃的两面，<br>
+            汇聚、<br>
+            转向。<br>
+            然后看着这幅景象，<br>
+            待到天边撕裂，<br>
+            入睡不能。<br>
+            可我又闭了眼去，<br>
+            因为我害怕天一亮，<br>
+            一切，<br>
+            就又消失得无踪无影，<br>
+            沉入那湖星辉间的泠泠。<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            七点<br>
+            我出门买东西<br>
+            看见的不是什么夜中而不眠<br>
+            而是一层淡淡的薄纱 和灯光几许<br>
+            那是一条黑暗的道路<br>
+            黑暗的甚至觉察不出 炊烟的存在<br>
+            我知道那里有什么<br>
+            我也知道 那里我必须干什么<br>
+            漫天星光 洋洋洒洒 坠落到我眼前<br>
+            转瞬即逝<br>
+            回首<br>
+            那是悠长街道的 无尽边缘<br>
+            路的那边<br>
+            闪耀着那 明灯般的 又微弱的 一抹亮红<br>
+            又看回眼前 几盏窗棂<br>
+            萦绕着 旖旎的 火光<br>
+            快步走进大门<br>
+            合门时<br>
+            那静谧的 悠长的 无形的薄纱<br>
+            眼见 拦下一道<br>
+            随即<br>
+            一切都那么活泼<br>
+            灯亮固然 欢声依旧<br>
+            只有眼角流露出的期待<br>
+            才能望穿炊烟里的笑容<br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            我拉开了店门<br>
+            磅礴的雾霭升起<br>
+            你登上了阶梯<br>
+            觉感长烟始至<br>
+            静谧出奇<br>
+            我看那连绵不断<br>
+            令人满意的机器<br>
+            你捧着星辰<br>
+            唳而惊起<br>
+            却道<br>
+            你可曾织了我的嫁衣<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            流云几纵断<br>
+            鎏心几竟欢<br>
+            卷视几隅定<br>
+            留足几绛还<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            啼翼出鞘 迩弥为砂<br>
+            鸣响光华 薄纱<br>
+            但闻几何彻耳于千里月下<br>
+            划过千万莹莹光点泼洒<br>
+            藏新芽<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            请让我再和你道一次别<br>
+            让消散的烟圈凝固成线<br>
+            让我再和你道一次别<br>
+            让流动的街角定然眼间<br>
+            请让我最后和你道一次别<br>
+            让卷起的广告回还先前<br>
+            让我最终和你道一次别<br>
+            让无限的目光断折跃迁<br>
+            请让我再和你道一次别<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            无雾萦的敲打，湍。<br>
+            卑劣的优雅飞舞得欢。<br>
+            那六台虬枝凌乱。<br>
+            案牍边明了又暗<br>
+            暗却半明的叶<br>
+            一张张翕动着蔓延着消逝着<br>
+            成了自己的枪版。<br>
+            樯峦河畔珠瓒<br>
+            也融进了涸一般意暖色暖<br>
+            歌暖。<br>
+            厚帐书难<br>
+            轻纱层进层瞰<br>
+            天阴却明之阑<br>
+            立年畔。<br>
+            惜我着靛衣身转<br>
+            倾墨叹淡<br>
+            生怕笔墨在这风寒<br>
+            半晌便干。<br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            地板上反射的光晕开始扩增<br>
+            我消散的月角也许滴落成风<br>
+            等着总会来的红灯<br>
+            和偶停脚的灰鹰<br>
+            我站在橘光下的白墙<br>
+            数着一二三四明星<br>
+            不知与谁辉映<br>
+            还有看不清的风向<br>
+            和久等的天明<br>
+            2022.02.21.03.52.15<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            第一印象<br>
+            短促而明亮<br>
+            滴落在雨面上<br>
+            沉默地流动<br>
+            沉没的火光<br>
+            风带离起跑线<br>
+            又无趣挑逗月央<br>
+            只是三个方向<br>
+            是触不到的漫长<br>
+            一贯地存放<br>
+            瀑布与水箱<br>
+            浪花面广<br>
+            便也只如须臾含离的印章<br>
+            只要出发<br>
+            都会顺利地驶向<br>
+            未曾瞻仰的前方<br>
+            2022.03.25.23.07.55<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            青幽几身滩涂<br>
+            双生金门对影<br>
+            千层明月浪难测<br>
+            颤落几笔油墨<br>
+            黑白浮雕动作<br>
+            千间牢锁万匙落<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            条条盏盏的日光<br>
+            游荡在簌簌缀饰的月芒下<br>
+            漫漫投着稀离边沿的枝节<br>
+            环环笼笼的霓虹<br>
+            附着在不闻喘息的静谧间<br>
+            偷偷描着盛放渡口的挥别<br>
+            只增几隅零零散散的明灭<br>
+            悠悠转转的目光<br>
+            回绕在列列相接的红影边<br>
+            涓涓流着丝丝流苏的鲜血<br>
+            断断续续的耳语<br>
+            盘旋在潺潺汩汩的幻想间<br>
+            默默披着时针卷席的生劫<br>
+            莫问水边镗镗鞳鞳的呜咽<br>
+            那是他乡绵延不绝的明天<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            似是樱花方白<br>
+            莫待<br>
+            偶行来<br>
+            风披铠<br>
+            才知三月早来<br>
+            登雅台<br>
+            葳蕤拽<br>
+            莫怪<br>
+            只是浮蕊轻拍<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            向高处坠落的水雾<br>
+            让忽明的天蓝<br>
+            剥离了些许杂音<br>
+            从风前飘过的柔软<br>
+            让墙上的光迹<br>
+            流转了二三水印<br>
+            沿湖海交替的穿越<br>
+            让层云的远处<br>
+            收纳了一二光心<br>
+            可难以观测的明灭<br>
+            让趋零的是否<br>
+            记录了难说何今<br>
+            只是一缕消失的云<br>
+            一隅触不可及的海滨<br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            旅行的旅行<br>
+            来自一场苏醒<br>
+            与一双不愿睁开的眼睛<br>
+            难寻尾戒一枚<br>
+            跨越风鸣<br>
+            在电台里平静地讲述着<br>
+            温宛柔媚的暴行<br>
+            倒映着着色的阴影<br>
+            印刷着碎裂的薄冰<br>
+            难推一间玄关<br>
+            机器轰鸣<br>
+            在凝雾中偷偷地伸手触<br>
+            将次移离的恒星<br>
+            间隔着揽青的叶障<br>
+            断绝着攀空的聆听<br>
+            踱尽一网战栗<br>
+            沐浴安宁<br>
+            在极光间紧紧地拥抱着<br>
+            淋漓无着的天明<br><br>
+        </p>
+
+        <p class="poem">
+            -<br><br>
+            半截差互的花绳<br>
+            编织典雅的捕梦网<br>
+            伴绕着抽离的魂灵<br>
+            总跨山海渺渺飘荡<br>
+            飞离了太阳与月亮<br>
+            记录着残缺的身旁<br>
+            不知胶片还有多长<br>
+            远处缎带早已曝光<br>
+            叶片打碎寂寥灯晃<br>
+            离岸灯塔指向何方<br>
+            大致未见的天堂<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            窗外蓝色的风缓缓流过<br>
+            流过蓝色窗帘的渐渐滑落<br>
+            划过边角的蹉跎<br>
+            罅隙扯开停滞的角落<br>
+            黄色的阳光坠落<br>
+            擦着蓝色的玻璃点燃篝火<br>
+            火焰在冰面上忘我<br>
+            颤抖着歌唱着生活<br>
+            歌唱着难以言说的棋布星罗<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            是云集。<br>
+            独枝展萼，万气引离。<br>
+            骇浪将至，段白，断白。<br>
+            万梦环流，是伸展，是含离。<br>
+            难扰十六风韵，幻去幻集。<br>
+            板间斜积，是画哉，归中抛离。<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            你可安好？枝桠间的舞台<br>
+            习惯了蔓延的干冰，错过了清雅的展开<br>
+            你可常在？残月间的盛开。<br>
+            你可留意？帘幕后的迷宫<br>
+            本觉是断壁残垣，才知是崖边归来<br>
+            你可忆起？星空下的慵懒<br>
+            还有安然躺在；伸手触狭间<br>
+            月开。<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            凝固，<br>
+            高高天上的爆竹。<br>
+            触摸方向的晨露，<br>
+            数十米路；<br>
+            半只鱼缸，<br>
+            不可交互。<br>
+            气泡在壶底上浮，<br>
+            咕噜噜。<br>
+            反射鳞上的光路，<br>
+            穿灯引幕；<br>
+            半壁蛛网，<br>
+            包裹孤独。<br><br>
+        </p>
+    </div>
 </div>
 
 <footer>
