--- a/HTML/Exitenph.html
+++ b/HTML/Exitenph.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
+    <script>
+        const ua = navigator.userAgent;
+        const isMobile = /Android|iPhone|iPod|Mobile/i.test(ua);
+
+        if (isMobile) {
+            setTimeout(() => {
+                document.querySelectorAll("header, .content").forEach(el => {
+                    el.style.width = "95%";
+                });
+                document.querySelectorAll(".logo").forEach(el => {
+                    el.style.maxWidth = "6rem";
+                });
+            }, 100);
+        }
+    </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>关于Exitenph</title>
@@ -8,11 +23,20 @@
 </head>
 <body>
 <header>
-    <img src="../IMG/logo.png" alt="logo" class="logo" />
+    <a href="index.html">
+        <img src="../IMG/logo.png" alt="logo" class="logo" />
+    </a>
 </header>
 <hr>
 <div class="content">
-
+    <p>
+        《逸梦集》的装帧设计由Exitenph负责。<br>
+        学习能力比较强的人。想要p图就去学Photoshop,想要剪视频就去学Premier,想要做排版就去学InDesign，有意思。<br>
+        为什么不用LaTeX或者是Markdown？答曰：太难了，滚。<br>
+        （清嗓子）这人做设计真的效率很低，纯纯磨洋工（哈气）。<br>
+        只是这活只有他能做。<br><br>
+        -Cogeph
+    </p>
 </div>
 <hr>
 <footer>
