--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,14 +10,13 @@
                 window.location.href = "mobile.html";
             }, 100);
         } else {
-            // window.location.href = "desktop.html";
+            window.location.href = "index.html";
         }
     </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>逸梦集</title>
     <link rel="stylesheet" href="../CSS/styles.css" />
-
 </head>
 <body>
 <header>
@@ -204,7 +203,6 @@
         我说，你看到了吗，那是我的家，我想回家了。<br><br>
     </p>
     <div class="poem-container">
-
         <p class="poem">
             -<br><br>
             那夜无雨，<br>
@@ -268,47 +266,6 @@
         </p>
         <p class="poem">
             -<br><br>
-            我拉开了店门<br>
-            磅礴的雾霭升起<br>
-            你登上了阶梯<br>
-            觉感长烟始至<br>
-            静谧出奇<br>
-            我看那连绵不断<br>
-            令人满意的机器<br>
-            你捧着星辰<br>
-            唳而惊起<br>
-            却道<br>
-            你可曾织了我的嫁衣<br><br>
-        </p>
-        <p class="poem">
-            -<br><br>
-            流云几纵断<br>
-            鎏心几竟欢<br>
-            卷视几隅定<br>
-            留足几绛还<br><br>
-        </p>
-        <p class="poem">
-            -<br><br>
-            啼翼出鞘 迩弥为砂<br>
-            鸣响光华 薄纱<br>
-            但闻几何彻耳于千里月下<br>
-            划过千万莹莹光点泼洒<br>
-            藏新芽<br><br>
-        </p>
-        <p class="poem">
-            -<br><br>
-            请让我再和你道一次别<br>
-            让消散的烟圈凝固成线<br>
-            让我再和你道一次别<br>
-            让流动的街角定然眼间<br>
-            请让我最后和你道一次别<br>
-            让卷起的广告回还先前<br>
-            让我最终和你道一次别<br>
-            让无限的目光断折跃迁<br>
-            请让我再和你道一次别<br><br>
-        </p>
-        <p class="poem">
-            -<br><br>
             无雾萦的敲打，湍。<br>
             卑劣的优雅飞舞得欢。<br>
             那六台虬枝凌乱。<br>
@@ -330,16 +287,35 @@
         </p>
         <p class="poem">
             -<br><br>
-            地板上反射的光晕开始扩增<br>
-            我消散的月角也许滴落成风<br>
-            等着总会来的红灯<br>
-            和偶停脚的灰鹰<br>
-            我站在橘光下的白墙<br>
-            数着一二三四明星<br>
-            不知与谁辉映<br>
-            还有看不清的风向<br>
-            和久等的天明<br>
-            2022.02.21.03.52.15<br><br>
+            条条盏盏的日光<br>
+            游荡在簌簌缀饰的月芒下<br>
+            漫漫投着稀离边沿的枝节<br>
+            环环笼笼的霓虹<br>
+            附着在不闻喘息的静谧间<br>
+            偷偷描着盛放渡口的挥别<br>
+            只增几隅零零散散的明灭<br>
+            悠悠转转的目光<br>
+            回绕在列列相接的红影边<br>
+            涓涓流着丝丝流苏的鲜血<br>
+            断断续续的耳语<br>
+            盘旋在潺潺汩汩的幻想间<br>
+            默默披着时针卷席的生劫<br>
+            莫问水边镗镗鞳鞳的呜咽<br>
+            那是他乡绵延不绝的明天<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            我拉开了店门<br>
+            磅礴的雾霭升起<br>
+            你登上了阶梯<br>
+            觉感长烟始至<br>
+            静谧出奇<br>
+            我看那连绵不断<br>
+            令人满意的机器<br>
+            你捧着星辰<br>
+            唳而惊起<br>
+            却道<br>
+            你可曾织了我的嫁衣<br><br>
         </p>
         <p class="poem">
             -<br><br>
@@ -363,6 +339,39 @@
         </p>
         <p class="poem">
             -<br><br>
+            啼翼出鞘 迩弥为砂<br>
+            鸣响光华 薄纱<br>
+            但闻几何彻耳于千里月下<br>
+            划过千万莹莹光点泼洒<br>
+            藏新芽<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            请让我再和你道一次别<br>
+            让消散的烟圈凝固成线<br>
+            让我再和你道一次别<br>
+            让流动的街角定然眼间<br>
+            请让我最后和你道一次别<br>
+            让卷起的广告回还先前<br>
+            让我最终和你道一次别<br>
+            让无限的目光断折跃迁<br>
+            请让我再和你道一次别<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
+            地板上反射的光晕开始扩增<br>
+            我消散的月角也许滴落成风<br>
+            等着总会来的红灯<br>
+            和偶停脚的灰鹰<br>
+            我站在橘光下的白墙<br>
+            数着一二三四明星<br>
+            不知与谁辉映<br>
+            还有看不清的风向<br>
+            和久等的天明<br>
+            2022.02.21.03.52.15<br><br>
+        </p>
+        <p class="poem">
+            -<br><br>
             青幽几身滩涂<br>
             双生金门对影<br>
             千层明月浪难测<br>
@@ -372,21 +381,10 @@
         </p>
         <p class="poem">
             -<br><br>
-            条条盏盏的日光<br>
-            游荡在簌簌缀饰的月芒下<br>
-            漫漫投着稀离边沿的枝节<br>
-            环环笼笼的霓虹<br>
-            附着在不闻喘息的静谧间<br>
-            偷偷描着盛放渡口的挥别<br>
-            只增几隅零零散散的明灭<br>
-            悠悠转转的目光<br>
-            回绕在列列相接的红影边<br>
-            涓涓流着丝丝流苏的鲜血<br>
-            断断续续的耳语<br>
-            盘旋在潺潺汩汩的幻想间<br>
-            默默披着时针卷席的生劫<br>
-            莫问水边镗镗鞳鞳的呜咽<br>
-            那是他乡绵延不绝的明天<br><br>
+            流云几纵断<br>
+            鎏心几竟欢<br>
+            卷视几隅定<br>
+            留足几绛还<br><br>
         </p>
         <p class="poem">
             -<br><br>
