--- a/HTML/mobile.html
+++ b/HTML/mobile.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
+  <script>
+    const ua = navigator.userAgent;
+    const isMobile = /Android|iPhone|iPod|Mobile/i.test(ua);
 
+    if (isMobile) {
+      setTimeout(() => {
+        window.location.href = "mobile.html";
+      }, 100);
+    } else {
+      window.location.href = "index.html";
+    }
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>逸梦集</title>
