--- a/HTML/note-mobile.html
+++ b/HTML/note-mobile.html
@@ -7,12 +7,20 @@
 
         if (isMobile) {
             setTimeout(() => {
-                window.location.href = "note-mobile.html";
+                // window.location.href = "note-mobile.html";
             }, 100);
         } else {
             window.location.href = "note-pc.html";
         }
     </script>
+    <style>
+        @font-face {
+            font-family: 'MyFont';
+            src: url('FONTS/taiwan.woff2') format('woff2');
+            font-weight: normal;
+            font-style: normal;
+        }
+    </style>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>写点什么吧……</title>
@@ -398,7 +406,7 @@
     <span>𝝖</span><br>
     <span>𝝗</span><br>
 </div>
-<a href="index.html">
+<a href="../index.html">
     <img src="../IMG/logo.png" alt="logo" class="logo" />
 </a>
 
